--- a/src/app/campaign/campaign-details/campaign-details.component.html
+++ b/src/app/campaign/campaign-details/campaign-details.component.html
@@ -1,19 +1,28 @@
 
 
 
+<div style=" text-align: center;">
+        <h4><small>{{selectedCampaign?.slogan}}</small></h4>
+        <hr>
+                <img src="{{apiRootUrl}}{{selectedCampaign?.main_logo}}" >
+        <hr>
 
-<h4><small>{{selectedCampaign.name}}</small></h4>
-<hr>
+        <h4>
 
-<hr>
+            <small>
+                Dates: {{selectedCampaign?.startdate}} <b>To</b> {{selectedCampaign?.enddate}}  
+            </small> 
 
-<div class="row">
-    <div class="col-md-12">
-        <button class="btn btn-primary" (click)="onBooking()" >Booking</button> &nbsp;
-        <button class="btn btn-primary" (click)= "onSchedule()">Schedule</button> &nbsp;
-        <button class="btn btn-primary">How to go live</button> &nbsp;
-        <button class="btn btn-primary">Watch live video</button> 
-    </div>    
+        </h4>
+
+        <div class="row">
+            <div class="col-md-12">
+                <button class="btn btn-primary" (click)="onBooking()" >Booking</button> &nbsp;
+                <button class="btn btn-primary" (click)= "onSchedule()">Schedule</button> &nbsp;
+                <button class="btn btn-primary">How to go live</button> &nbsp;
+                <button class="btn btn-primary">Watch live video</button> 
+            </div>    
+        </div>
 </div>
  <br>
  <div class="row">
