--- a/src/app/campaign/campaign-details/booking/booking.component.html
+++ b/src/app/campaign/campaign-details/booking/booking.component.html
@@ -2,7 +2,7 @@
 
     <div class="form-group">
         <label for="name">Name:</label>
-        <input type="text" class="form-control" id="name" name="name" required ngModel>
+        <input type="text" class="form-control" id="uname" name="uname" required [(ngModel)] = "booking.usr.uname">
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
@@ -11,14 +11,14 @@
     <div class="form-group">
         <label for="address">Address:</label>
 
-        <textarea class="form-control" id="address" rows="3" name="address" required ngModel></textarea>
+        <textarea class="form-control" id="address" rows="3" name="address" required [(ngModel)] = "booking.usr.address"></textarea>
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
 
     <div class="form-group">
         <label for="city">City:</label>
-        <input type="text" class="form-control" id="city" name="city" required ngModel>
+        <input type="text" class="form-control" id="city" name="city" required [(ngModel)] = "booking.usr.city">
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
@@ -26,7 +26,7 @@
 
     <div class="form-group">
         <label for="email">Email:</label>
-        <input type="email" class="form-control" id="email" name="email" required ngModel>
+        <input type="email" class="form-control" id="email" name="email" required [(ngModel)] = "booking.usr.email">
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
@@ -34,7 +34,7 @@
 
     <div class="form-group">
         <label for="phone">Phone Number:</label>
-        <input type="number" class="form-control" id="phone" name="phone" required ngModel>
+        <input type="number" class="form-control" id="phone" name="phone" required [(ngModel)] = "booking.usr.contact">
         <div class="valid-feedback">Valid.</div>
         <div class="invalid-feedback">Please fill out this field.</div>
     </div>
@@ -44,13 +44,14 @@
     <!-- this date picker doesn't take max date dynamically ?? -->
     <div class="form-group">
         <label for="date">Date:</label> &nbsp;
-        <input type="date" id="date" name="date" value="" [max]="eDate" [min]="sDate"  required ngModel >
+        <input type="date" id="date" name="date"  value="" required [(ngModel)] = "booking.booking_date" >
+        
         <span class="validity"></span>
     </div>
      
     <div class="form-group ">
         <label for="timeSlot">Time Slot</label>
-        <select id="timeSlot" class="form-control" name ="timeSlot" ngModel>
+        <select id="timeSlot" class="form-control" name ="timeSlot" [(ngModel)] = "booking.slot">
             <option selected>Choose...</option>
             <option>1</option>
             <option>2</option>
