--- a/src/app/campaign/campaign.component.html
+++ b/src/app/campaign/campaign.component.html
@@ -3,10 +3,8 @@
 
 <div class="container-fluid">
     <div class="row content">
-        <div class="col-sm-3 sidenav nav justify-content-center">
-            
-            <app-campaign-list></app-campaign-list>
-        </div>
+        
+        <sd-navbar></sd-navbar>
 
         <div class="col-sm-9">
            
