few display update

--- a/src/app/campaign/campaign-details/campaign-details.component.html
+++ b/src/app/campaign/campaign-details/campaign-details.component.html
@@ -10,7 +10,7 @@
         <h4>
 
             <small>
-                Dates: {{selectedCampaign?.startdate}} <b>To</b> {{selectedCampaign?.enddate}}  
+                Dates: {{startDate}} <b>To</b> {{endDate}}  
             </small> 
 
         </h4>
@@ -19,8 +19,7 @@
             <div class="col-md-12">
                 <button class="btn btn-primary" (click)="onBooking()" >Booking</button> &nbsp;
                 <button class="btn btn-primary" (click)= "onSchedule()">Schedule</button> &nbsp;
-                <button class="btn btn-primary">How to go live</button> &nbsp;
-                <button class="btn btn-primary">Watch live video</button> 
+                
             </div>    
         </div>
 </div>
