--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,4 @@
+<div *ngIf='nav.visible'>
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <!-- Brand -->
     <a class="navbar-brand" routerLink = ''>Jain Mahasabha</a>
@@ -19,3 +20,4 @@
         </ul>
     </div>
 </nav>
+</div>
