--- a/src/app/campaign/campaign-details/booking/booking.component.html
+++ b/src/app/campaign/campaign-details/booking/booking.component.html
@@ -1,65 +1,70 @@
-<form (ngSubmit)=onSubmit(f) #f="ngForm">
+<div class="container">
+
+    <form (ngSubmit)=onSubmit(f) #f="ngForm">
 
     <div class="form-group">
         <label for="name">Name:</label>
-        <input type="text" class="form-control" id="uname" name="uname" required [(ngModel)] = "booking.usr.uname">
-        <div class="valid-feedback">Valid.</div>
-        <div class="invalid-feedback">Please fill out this field.</div>
+        <input type="text" class="form-control" id="uname" name="uname" required [(ngModel)]="booking.usr.uname"
+            #name="ngModel">
+        <span class="text-danger" *ngIf="!name.valid && name.touched">Please your name! </span>
     </div>
 
 
     <div class="form-group">
         <label for="address">Address:</label>
 
-        <textarea class="form-control" id="address" rows="3" name="address" required [(ngModel)] = "booking.usr.address"></textarea>
-        <div class="valid-feedback">Valid.</div>
-        <div class="invalid-feedback">Please fill out this field.</div>
+        <textarea class="form-control" id="address" rows="3" name="address" required [(ngModel)]="booking.usr.address"
+            #textarea="ngModel"></textarea>
+        <span class="text-danger" *ngIf="!textarea.valid && textarea.touched">Please enter description! </span>
     </div>
 
     <div class="form-group">
         <label for="city">City:</label>
-        <input type="text" class="form-control" id="city" name="city" required [(ngModel)] = "booking.usr.city">
-        <div class="valid-feedback">Valid.</div>
-        <div class="invalid-feedback">Please fill out this field.</div>
+        <input type="text" class="form-control" id="city" name="city" required [(ngModel)]="booking.usr.city"
+            #city="ngModel">
+        <span class="text-danger" *ngIf="!city.valid && city.touched">Please enter city! </span>
     </div>
 
 
     <div class="form-group">
         <label for="email">Email:</label>
-        <input type="email" class="form-control" id="email" name="email" required [(ngModel)] = "booking.usr.email">
-        <div class="valid-feedback">Valid.</div>
-        <div class="invalid-feedback">Please fill out this field.</div>
+        <input type="email" class="form-control" id="email" name="email" required [(ngModel)]="booking.usr.email"
+            #email="ngModel">
+        <span class="text-danger" *ngIf="!email.valid && email.touched">Please enter valid email! </span>
     </div>
 
 
     <div class="form-group">
         <label for="phone">Phone Number:</label>
-        <input type="number" class="form-control" id="phone" name="phone" required [(ngModel)] = "booking.usr.contact">
-        <div class="valid-feedback">Valid.</div>
-        <div class="invalid-feedback">Please fill out this field.</div>
+        <input type="number" class="form-control" id="phone" name="phone" pattern="[1-9]{1}[0-9]{9}" required
+            [(ngModel)]="booking.usr.contact" #phone="ngModel">
+        <span class="text-danger" *ngIf="!phone.valid && phone.touched">Please enter phone number! </span>
     </div>
 
 
 
-    <!-- this date picker doesn't take max date dynamically ?? -->
+    <!-- this date picker doesn't take max /min date dynamically ?? -->
     <div class="form-group">
         <label for="date">Date:</label> &nbsp;
-        <input type="date" (ngModelChange)="dateChanged()" id="date" name="date"  value="" required [(ngModel)] = "booking.booking_date" >
-        
-        <span class="validity"></span>
+        <input type="date" (ngModelChange)="dateChanged()" id="date" name="date" value={{startDate}} required
+            min="2020-05-27" max="2020-05-30" [(ngModel)]="booking.booking_date" #date="ngModel"> &nbsp;
+            
+        <span class="text-danger" *ngIf="!date.valid && date.touched">Please select date! </span>
     </div>
-     
+
     <div class="form-group ">
         <label for="timeSlot">Available Time Slot</label>
-        <select id="timeSlot" class="form-control" name ="timeSlot" [(ngModel)] = "booking.slot">
+        <select id="timeSlot" class="form-control" name="timeSlot" [(ngModel)]="booking.slot" #slot="ngModel" required>
             <option selected>Choose...</option>
             <option>1</option>
             <option>2</option>
-
         </select>
+        <span class="text-danger" *ngIf="!slot.valid && slot.touched">Please select a slot! </span>
     </div>
 
 
 
     <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Submit</button> &nbsp;
 </form>
+
+</div>
