--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div *ngIf='nav.visible'>
+<div *ngIf='navDisplay'>
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
     <!-- Brand -->
     <a class="navbar-brand" routerLink = ''>Jain Mahasabha</a>
