--- a/src/app/campaign/campaign-details/schedule/schedule.component.html
+++ b/src/app/campaign/campaign-details/schedule/schedule.component.html
@@ -8,16 +8,20 @@
     <thead class="thead-light">
       <tr>
         <th scope="col">#</th>
+        <th scope="col">Date</th>
         <th scope="col">Time Slot</th>
         <th scope="col">Name</th>
         <th scope="col">City</th>
       </tr>
     </thead>
 
-    <tbody *ngFor = "let s of scheduleList ; let i = index">
+    <tbody *ngFor = "let s of allBookings ; let i = index">
       <tr>
         <th scope="row">{{i}}1</th>
-        <td>{{s.timeSlot}}</td>
-        <td>{{s.name}}</td>
+        <td>{{s.booking_date}}</td>
+        <td>{{s.config_value}}</td>
+        <td>{{s.uname}}</td>
         <td>{{s.city}}</td>
       </tr>
+
+      </table>  
