--- a/src/app/campaign/campaign-details/booking/booking.component.html
+++ b/src/app/campaign/campaign-details/booking/booking.component.html
@@ -28,7 +28,7 @@
 
     <div class="form-group">
         <label for="email">Email:</label>
-        <input type="email" class="form-control" id="email" name="email" required [(ngModel)]="booking.usr.email"
+        <input type="email" class="form-control" id="email" name="email" required [(ngModel)]="booking.usr.email" email
             #email="ngModel">
         <span class="text-danger" *ngIf="!email.valid && email.touched">Please enter valid email! </span>
     </div>
@@ -46,7 +46,7 @@
     
     <div class="form-group">
         <label for="date">Date:</label> &nbsp;
-        <input type="date" (ngModelChange)="dateChanged()" id="date" name="date" value='' required
+        <input type="date" (ngModelChange)="dateChanged($event)" id="date" name="date" value='' required
             min="{{startDate}}" max="{{endDate}}" [(ngModel)]="booking.booking_date" #date="ngModel"> &nbsp;<br>
             
         <span class="text-danger" *ngIf="!date.valid && date.touched">Please select date! </span>
@@ -56,14 +56,18 @@
         <label for="timeSlot">Available Time Slot</label>
         <select id="timeSlot" class="form-control" name="timeSlot" [(ngModel)]="booking.slot" #slot="ngModel" required >
             <option value=""></option>
-            <option *ngFor = "let slot of slotList">{{slot.config_value}}</option>
+            <option *ngFor = "let slot of displaySlots"> {{slot}}</option>
+            
         </select>
-        <span class="text-danger" *ngIf="!slot.valid && slot.touched">Please select a slot! </span>
+        <span class="text-danger" *ngIf="!slot.valid && slot.touched && displaySlots.length !==0 ">Please select a slot! </span>
+        <span class="text-danger" *ngIf="displaySlots.length ==0 && slot.touched && date.touched">No slots available for this date! </span>
+        <span class="text-danger" *ngIf="!slot.valid && slot.touched && date.untouched ">Please select date first! </span>
     </div>
 
 
 
     <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Submit</button> &nbsp;
 </form>
+
 
 </div>
