--- a/src/app/campaign/campaign-details/schedule/schedule.component.html
+++ b/src/app/campaign/campaign-details/schedule/schedule.component.html
@@ -1,9 +1,5 @@
-
-
-  
-
-
-<table class="table">
+<div class="container">
+  <table class="table">
 
     <thead class="thead-light">
       <tr>
@@ -15,13 +11,14 @@
       </tr>
     </thead>
 
-    <tbody *ngFor = "let s of allBookings ; let i = index">
+    <tbody *ngFor="let s of allBookings ; let i = index">
       <tr>
-        <th scope="row">{{i}}1</th>
+        <th scope="row">{{i+1}}</th>
         <td>{{s.booking_date}}</td>
         <td>{{s.config_value}}</td>
         <td>{{s.uname}}</td>
         <td>{{s.city}}</td>
       </tr>
 
-      </table>  
+  </table>
+</div>
