--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,23 +1,23 @@
-<div *ngIf='navDisplay'>
-<nav class="navbar navbar-expand-md bg-dark navbar-dark">
-    <!-- Brand -->
-    <a class="navbar-brand" routerLink = ''>Jain Mahasabha</a>
+<div *ngIf='nav.visible'>
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+        <!-- Brand -->
+        <a class="navbar-brand" routerLink=''>Jain Mahasabha</a>
 
-    <!-- Toggler/collapsibe Button -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+        <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <!-- Navbar links -->
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" routerLink = '/campaign' routerLinkActive = 'active'>Campaign</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" routerLink = '/about-us' routerLinkActive = 'active'>About Us</a>
-            </li>
-        </ul>
-    </div>
-</nav>
+        <!-- Navbar links -->
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" routerLink='/campaign' routerLinkActive='active'>Campaign</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" routerLink='/about-us' routerLinkActive='active'>About Us</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </div>
