--- a/src/app/campaign/campaign-list/campaign-item/campaign-item.component.html
+++ b/src/app/campaign/campaign-list/campaign-item/campaign-item.component.html
@@ -1,8 +1,6 @@
 
 <a  (click)="openCampaignInNewWindow(myCampaign)"  class="container-fluid" style="cursor: pointer;">
-<div class="row">
     <div class="col-sm-12">
-       <h6>{{myCampaign.shortdesc}}</h6> 
+       {{myCampaign.name}}
     </div>
-</div>
 </a>
