--- a/src/app/campaign/campaign.component.html
+++ b/src/app/campaign/campaign.component.html
@@ -1,16 +1,8 @@
-
-
-
 <div class="container-fluid">
-   
-    <div class="row content">
-        
-        <sd-navbar></sd-navbar>
-
+   <div class="row content">
+       <sd-navbar></sd-navbar>
         <div class="col-sm-9">
-           
-            
             <router-outlet></router-outlet>
-    
+        </div>
     </div>
 </div>
