--- a/src/app/campaign/campaign.component.css
+++ b/src/app/campaign/campaign.component.css
@@ -1,4 +1,4 @@
 /* Set height of the grid so .sidenav can be 100% (adjust if needed) */
-.row.content {height: 600px}
+.row.content {height: 1200px;}
     
 /* Set gray background color and 100% height */
