--- a/src/app/campaign/campaign.component.html
+++ b/src/app/campaign/campaign.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid">
+<div class="container-fluid px-0">
    <div class="row content">
        <sd-navbar></sd-navbar>
-        <div class="col-sm-9">
+        <div class="col-md-12">
             <router-outlet></router-outlet>
         </div>
     </div>
