--- a/src/app/campaign/campaign-details/campaign-details.component.html
+++ b/src/app/campaign/campaign-details/campaign-details.component.html
@@ -46,20 +46,10 @@
 			<div class="row">
 				<div class="col-sm">
 					<div *ngIf='selectedCampaign.footer_logo1'>
-						<img class="img-fluid" alt="Bootstrap Image Preview" src="{{apiRootUrl}}{{selectedCampaign?.footer_logo1}}">
+						<img class="img-fluid" style="width:100%" alt="Bootstrap Image Preview" src="{{apiRootUrl}}{{selectedCampaign?.footer_logo1}}">
 					</div>
 				</div>
-				<div class="col-sm">
-					
-				</div>
-				<div class="col-sm">
-					
-				</div>
-				<div class="col-sm">
-					<div *ngIf='selectedCampaign.footer_logo1'>
-						<img class="img-fluid" alt="Bootstrap Image Preview" src="{{apiRootUrl}}{{selectedCampaign?.footer_logo1}}">			
-					</div>
-				</div>
+			
 			  </div>
 			  <p> </p><p> </p>		
 		</div>
