--- a/src/app/campaign/campaign-details/campaign-details.component.html
+++ b/src/app/campaign/campaign-details/campaign-details.component.html
@@ -24,7 +24,7 @@
                     </h4>
                 </div>
 				<p>
-					{{selectedCampaign?.shortdesc}} {{selectedCampaign?.shortdesc}} {{selectedCampaign?.shortdesc}}{{selectedCampaign?.shortdesc}}{{selectedCampaign?.shortdesc}}{{selectedCampaign?.shortdesc}}
+					{{selectedCampaign?.longdesc}}
 				</p>
 			<div class="text-center">
 			<div>
@@ -39,7 +39,7 @@
 			<p> </p><p> </p>
 			<div class="container-fluid">
 				<div class="row">
-					Contact Persons: 
+					संपर्क सूत्र: 
 				 </div>
 			  </div>
 			  <p> </p><p> </p>
