--- a/src/app/campaign/campaign-details/schedule/schedule.component.html
+++ b/src/app/campaign/campaign-details/schedule/schedule.component.html
@@ -8,6 +8,7 @@
         <th scope="col">Time Slot</th>
         <th scope="col">Name</th>
         <th scope="col">City</th>
+         <th scope="col">State</th>
       </tr>
     </thead>
 
@@ -18,6 +19,7 @@
         <td>{{s.config_value}}</td>
         <td>{{s.uname}}</td>
         <td>{{s.city}}</td>
+        <td>{{s.state_name}}</td>
       </tr>
 
   </table>
