--- a/src/app/campaign/campaign-details/booking/booking.component.css
+++ b/src/app/campaign/campaign-details/booking/booking.component.css
@@ -1,7 +1,15 @@
 
 .container{
     margin-top: 40px;
+   
 }
+
+.row{
+    margin-top: 40px;
+    margin-left:  auto;
+    margin-right: auto;
+}
+
 
 
 
