--- a/src/app/campaign/campaign-details/schedule/schedule.component.html
+++ b/src/app/campaign/campaign-details/schedule/schedule.component.html
@@ -1,26 +1,34 @@
 <div class="container">
-  <table class="table">
+  <div class="row">
+    <table class="table">
 
-    <thead class="thead-light">
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Date</th>
-        <th scope="col">Time Slot</th>
-        <th scope="col">Name</th>
-        <th scope="col">City</th>
-         <th scope="col">State</th>
-      </tr>
-    </thead>
+      <thead class="thead-light">
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Date</th>
+          <th scope="col">Time Slot</th>
+          <th scope="col">Name</th>
+          <th scope="col">City</th>
+          <th scope="col">State</th>
+        </tr>
+      </thead>
 
-    <tbody *ngFor="let s of allBookings ; let i = index">
-      <tr>
-        <th scope="row">{{i+1}}</th>
-        <td>{{s.booking_date}}</td>
-        <td>{{s.config_value}}</td>
-        <td>{{s.uname}}</td>
-        <td>{{s.city}}</td>
-        <td>{{s.state_name}}</td>
-      </tr>
+      <tbody *ngFor="let s of allBookings ; let i = index">
+        <tr>
+          <th scope="row">{{i+1}}</th>
+          <td>{{s.booking_date}}</td>
+          <td>{{s.config_value}}</td>
+          <td>{{s.uname}}</td>
+          <td>{{s.city}}</td>
+          <td>{{s.state_name}}</td>
+        </tr>
 
-  </table>
+    </table>
+
+  </div>
+
+  <div class="row">
+    <a [routerLink]="['/campaign',cid]"> Go back</a>
+  </div>
+
 </div>
