--- a/src/app/campaign/campaign-details/campaign-details.component.css
+++ b/src/app/campaign/campaign-details/campaign-details.component.css
@@ -1,3 +1,8 @@
+
+.panel-body {
+    overflow: scroll;
+    height: 100px;
+}
 .border-custom {
     border-top: 15px solid #eb9534;
     border-bottom: 15px solid #eb9534
