--- a/src/app/campaign/campaign-details/booking/booking.component.html
+++ b/src/app/campaign/campaign-details/booking/booking.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row">
+    <div class="">
         <button type="button" class="btn btn-outline-secondary " [ngClass]="{'active': !formDisplay}"
             (click)="onExistingUser()"> Existing User</button> &nbsp;&nbsp;
         <button type="button" class="btn btn-outline-secondary " [ngClass]="{'active': formDisplay}"
@@ -8,7 +8,7 @@
 
 
 
-    <div class="row" *ngIf="!formDisplay">
+    <div class="" *ngIf="!formDisplay">
         <form (ngSubmit)=onSubmit(f) #f="ngForm">
             <div class="form-group">
                 <label for="phone">Phone Number:</label>
@@ -48,14 +48,14 @@
             <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Submit</button> &nbsp;
 
         </form>
-    </div>
+    </div> 
 
 
 
 
 
 
-    <div class="row" *ngIf="formDisplay">
+    <div class="" *ngIf="formDisplay">
 
         <form (ngSubmit)=onSubmit(f) #f="ngForm">
 
@@ -136,13 +136,13 @@
             <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Submit</button> &nbsp;
         </form>
 
-
+<!-- 
     </div>
 
     <div class="row">
         <a [routerLink]="['/campaign',cid]"> Go back</a>
 
-    </div>
+    </div> -->
 
 
 </div>
