--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,10 @@
 <div *ngIf='nav.visible'>
     <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <!-- Brand -->
-        <a class="navbar-brand" routerLink=''>Jain Mahasabha</a>
+        <!-- <img src="/img/quick-campaign-2.png" alt="logo"> -->
+        <a class="navbar-brand" routerLink=''>{{headerBrand}}</a>
+
+
 
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -12,11 +15,13 @@
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" routerLink='/campaign' routerLinkActive='active'>Campaign</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" routerLink='/about-us' routerLinkActive='active'>About Us</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" routerLink='/campaign' routerLinkActive='active'>Campaign</a>
+                </li>
+
             </ul>
         </div>
     </nav>
