--- a/src/app/campaign/campaign-details/booking/booking.component.html
+++ b/src/app/campaign/campaign-details/booking/booking.component.html
@@ -3,9 +3,9 @@
     <div class="">
       
         <button type="button" class="btn btn-outline-secondary " [ngClass]="{'active': !formDisplay}"
-            (click)="onExistingUser()"> Existing User</button> &nbsp;&nbsp;
+            (click)="onExistingUser();"> Existing User</button> &nbsp;&nbsp;
         <button type="button" class="btn btn-outline-secondary " [ngClass]="{'active': formDisplay}"
-            (click)="onNewUser()"> New User</button>
+            (click)="onNewUser();"> New User</button>
     </div>
     <br><br>
     <div class="" *ngIf="!formDisplay">
@@ -45,7 +45,7 @@
 
 
 
-            <button type="submit" class="btn btn-primary" [disabled]="!f.valid" (click)="f.reset()">Submit</button> &nbsp;
+            <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Submit</button> &nbsp;
 
         </form>
     </div> 
@@ -128,7 +128,7 @@
 
 
 
-            <button type="submit" class="btn btn-primary" [disabled]="!f.valid" (click) = "f.reset()">Submit</button>
+            <button type="submit" class="btn btn-primary" [disabled]="!f.valid">Submit</button>
         </form>
 
  
