--- a/src/app/campaign/campaign-details/campaign-details.component.html
+++ b/src/app/campaign/campaign-details/campaign-details.component.html
@@ -32,7 +32,7 @@
 					Book Your Time
 				</button>
 				<button class="btn btn-warning ml-3" (click)= "onSchedule()" type="button">
-					Check Slot
+					Booked Slots
 				</button> 
 			</div>
 			</div>
